--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
+/* Globala stiler */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-size: 1.4rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background: rgb(236, 236, 255);
+    color: rgb(0, 8, 72);
+  }
+  main {
+    margin: 0 auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+   
+    gap: 2rem;
+  
+    min-height: 100vh;
+    padding: 1rem 3rem;
+  }
+  
+  /* Globala media queries */
+  @media screen and (max-width: 769px) {
+    body {
+      font-size: 1rem;
+    }
+    main {
+      width: 100%;
+      margin: 0 auto;
+      padding: 0 1rem;
+    }
+  }
+  
